# catalyst

./: .bazelrc  .dclignore  .default_env  .dockerignore  .env  .eslintignore  .eslintrc.json  .gitignore  .gitlab-ci.yml  .prettierignore  .tsbuildinfo  BUILD.bazel  Dockerfile  Dockerfile.content  Dockerfile.lambdas  LICENSE  README.md  WORKSPACE  action.yml  blocks-cache-polygon.csv  common.package.json  docker-compose.yml  entrypoint.sh  failed-deployments-analysis-2.txt  failed-deployments-analysis-invalid.txt  failed-deployments-analysis.txt  init-letsencrypt.sh  init.sh  jasmine.json  jest.config.js  jest.globalSetup.ts  jest.setupFilesAfterEnv.ts  lerna.json  npm-link-peer.sh  package.json  prepare_for_docker_image.sh  reportApiCoverage.js  tsconfig.base.json  tsconfig.json  tslint.json  (+2 more)
commons/: BUILD.bazel  index.ts  jasmine.json  jest.config.js  package.json  tsconfig.json
commons/servers/: BUILD.bazel  DAOClient.ts  DAOContract.ts  QueryParameters.ts  ServerMetadata.ts  addresses.ts  asyncHandler.ts  fsutils.ts  handlers.ts  index.ts  metrics.ts  signatures.ts  synchronizationState.ts
commons/servers/test/: DAOClient.spec.ts  DAOContractClient.spec.ts  handlers.spec.ts
commons/src/: DAOClient.ts  metrics.ts  util.ts
commons/test-utils/: BUILD.bazel  helpers.ts  index.ts  reporter.ts
commons/utils/: BUILD.bazel  Positions.ts  package.json  util.ts
commons/utils/test/: CircularBuffer.spec.ts  Positions.spec.ts  RingBuffer.spec.ts
comms/lighthouse/: .gitignore  BUILD.bazel  README.md  jasmine.json  jest.config.js  package.json  rollup.config.js  tsconfig.json
comms/lighthouse/src/: archipelagoService.ts  auth.ts  configService.ts  default_layers.ts  errors.ts  handlers.ts  idService.ts  initPeerJsServer.ts  layersService.ts  loggin.ts  logging.ts  metrics.ts  naming.ts  peersService.ts  readyStateService.ts  roomsService.ts  routes.ts  server.ts  simpleStorage.ts  storageKeys.ts  types.ts  utils.ts
comms/lighthouse/test/: archipelagoService.spec.ts  configService.spec.ts  handlers.spec.ts  idService.spec.ts  index.spec.ts  naming.spec.ts  roomsService.spec.ts
comms/peer/: BUILD.bazel  compile-protobuf.sh  karma.conf.js  package.json  peer.package.json  peer_pb.d.ts  rollup.config.js
comms/peer/proto/: BUILD.bazel  peer.proto
comms/peer/src/: Peer.ts  PeerHttpClient.ts  PeerWebRTCHandler.ts  TimeKeeper.ts  constants.ts  index.ts  messageTypes.ts  stats.ts  types.ts
comms/peer/test/: Peer.integration.spec.ts  config.js
comms/performance-test/: BUILD.bazel  README.md  clientRunner.Dockerfile  client_entrypoint.sh  clients.env.list  prepare_for_client_docker_image.sh  run-clients.ts  run-docker-client-image-example.sh  run-local-test.ts  test-client.ts  test-server-api.ts
comms/performance-test/client/: BUILD.bazel  config.js  index.html  index.ts
comms/performance-test/server/: BUILD.bazel  server.ts
comms/performance-test/test-results-processing/: process-test-response.html  process-test-results.js
comms/protocol/: BUILD.bazel  messageTypes.ts
content/: .gitignore  BUILD.bazel  CLAUDE.md  README.md  blocks-cache-mainnet.csv  content.package.json  jasmine.integration.json  jasmine.unit.json  jest.config.integration.js  jest.config.integration.json  jest.config.js  jest.config.unit.json  jest.globalSetup.ts  jest.globalTeardown.ts  jest.setupFilesAfterEnv.ts  log  package.json  printApiCoverage.js  server.ts  tasks.txt  tsconfig.json  vitest.config.ts
content/__mocks__/: file-type.ts
content/docs/: database-schema.md
content/src/: BUILD.bazel  ContentMetrics.ts  ContentStorage.ts  Environment.ts  FileSystemStorage.ts  MigrationManager.ts  MigrationManagerFactory.ts  Server.ts  components.ts  deployment-types.ts  errors.ts  formatters.ts  instrument.ts  metrics.ts  run-server.ts  server.ts  service.ts  snapshotCleaner.ts  types.ts  upload.ts
content/src/blacklist/: Blacklist.ts  BlacklistFactory.ts  BlacklistServiceDecorator.ts  BlacklistStorage.ts  BlacklistTarget.ts
content/src/controller/: Controller.ts  ControllerDeploymentFactory.ts  ControllerEntityFactory.ts  ControllerFactory.ts  active-entities-handler.ts  controller.ts  create-entity-handler.ts  error-handler.ts  failed-deployments-handler.ts  filter-by-urn-handler.ts  get-audit-handler.ts  get-available-content-handler.ts  middlewares.ts  pointer-changes-handler.ts  routes.ts  status-handler.ts  utils.ts
content/src/controllers/: errors.ts  middlewares.ts  routes.ts  utils.ts
content/src/denylist/: ActiveDenylist.ts  Denylist.ts  (+8 more)
content/test/: FileSystemStorage.spec.ts  PromiseAssertions.ts  Server.spec.ts  index.spec.ts  mock-server.ts  postgres-test-container.ts  tsconfig.json
contracts/: BUILD.bazel  Catalyst.ts  CatalystAbi.ts  DAOContract.ts  DAOListContract.ts  Katalyst.ts  List.ts  ListAbi.ts  index.ts  package.json  tsconfig.json  utils.ts
contracts/spec/: contracts.json
crypto/src/: Authenticator.ts  BUILD.bazel  types.ts
lambdas/: .env.default  .gitignore  BUILD.bazel  README.md  jasmine.json  jest.config.js  lambdas.package.json  package.json  tsconfig.json
lambdas/src/: BUILD.bazel  Environment.ts  EnvironmentUtils.ts  MetricsServer.ts  Server.ts  SmartContentServerFetcher.ts  SmartContentServerFetcherFactory.ts  components.ts  index.ts  metrics.ts  metrics2.ts  service.ts  types.ts
lambdas/test/: Dummy.spec.ts
lighthouse/: BUILD.bazel  lighthouse.package.json  server.ts
lighthouse/src/: handlers.ts  roomsService.ts  server.ts  simpleStorage.ts  storageKeys.ts
lighthouse/test/: handlers.spec.ts
peer/: App.tsx  BUILD.bazel  Peer.ts  PeerStub.ts  index.html  index.ts  karma.conf.js  peer.package.json
peer-react-app/: App.tsx  BUILD.bazel  index.html
peer-react-app/autotest/: Test.json
peer-react-app/components/: Chat.tsx  ConnectForm.tsx  PeerToken.ts
peer-react-app/static/: config.js  index.css
peer/peerjs-server-connector/: peerjsserverconnection.ts  util.ts
peer/src/: Peer.ts  index.spec.js  index.ts  types.ts
peer/static/: config.js
peer/test/: Peer.integration.spec.ts  config.js  index.ts
peer/utils/: Task.ts
(+1248 files in other folders)
