load("@npm_bazel_typescript//:index.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "commons",
    srcs = glob(["src/**/*.ts"]),
    module_name = "decentraland-katalyst-commons",
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//prom-client",
        "@npm//response-time",
        "@npm//express",
        "@npm//@types",
    ],
)

