package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "contracts",
    srcs = glob(["**/*.ts"]),
    module_name = "decentraland-katalyst-contracts",
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types",
        "@npm//web3x",
    ],
)
