package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

filegroup(
    name = "api_resources",
    srcs = glob(["src/**/*.json"])
)

nodejs_binary(
    name = "server",
    data = [
        "//lambdas/src:lambdas",
        ":api_resources",
        "@npm//@bazel/typescript",
        "@npm//typescript",
    ],
    entry_point = "//lambdas/src:entrypoints/run-server.ts",
)

load("//tools/npm:package.bzl", "dataform_npm_package")

dataform_npm_package(
    name = "package",
    package_layers = [
        "//:common.package.json",
        "lambdas.package.json",
    ],
    deps = [],
)

ts_library(
    name = "tests",
    testonly = 1,
    srcs = glob(["test/**/*.ts"]),
    tsconfig = "//:tsconfig.json",
    deps = [
        "//lambdas/src:lambdas",
        "//commons/utils",
        "@npm//@types/node",
        "@npm//@types/jasmine",
        "@npm//@types/faker",
        "@npm//node-fetch",
        "@npm//@types/node-fetch",
        "@npm//dcl-catalyst-commons",
        "@npm//ts-mockito",
        "@npm//dcl-crypto",
        "@npm//faker",
        "@npm//sinon",
        "@npm//@dcl/urn-resolver"
    ],
)

load("@npm_bazel_jasmine//:index.bzl", "jasmine_node_test")

jasmine_node_test(
    name = "unit_test",
    deps = [
        ":tests",
        "@npm//jasmine",
    ],
)
