package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

ts_library(
    name = "lighthouse",
    srcs = glob(["*.ts"]),
    module_name = "@katalyst/lighthouse",
    deps = [
        "@npm//@types",
        "@npm//cors",
        "@npm//express",
        "@npm//morgan",
        "@npm//peerjs-server",
    ],
)

nodejs_binary(
    name = "server",
    data = [
        ":lighthouse",
        "@npm//@bazel/typescript",
        "@npm//typescript",
    ],
    entry_point = "server.ts",
)

load("//tools/npm:package.bzl", "dataform_npm_package")

dataform_npm_package(
    name = "package",
    package_layers = [
        "//:common.package.json",
        "lighthouse.package.json",
    ],
    deps = [],
)

ts_library(
    name = "tests",
    testonly = 1,
    srcs = glob(["test/**/*.ts"]),
    tsconfig = "//:tsconfig.json",
    deps = [
        ":lighthouse",
        "@npm//jasmine",
        "@npm//@types/jasmine",
    ],
)

load("@npm_bazel_karma//:index.bzl", "karma_web_test_suite")

karma_web_test_suite(
    name = "config_test",
    tags = [],
    runtime_deps = [
    ],
    deps = [
        ":tests",
    ],
)
