load("@npm_bazel_typescript//:index.bzl", "ts_devserver", "ts_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "static",
    srcs = glob(
        include = [
            "static/**/*",
        ],
    ),
)

ts_library(
    name = "peer-react-app",
    srcs = glob(include =
                    [
                        "**/*.tsx",
                        "**/*.ts",
                    ]),
    tsconfig = "//:tsconfig.json",
    deps = [
        "//peer",
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//decentraland-ui",
        "@npm//react",
        "@npm//react-dom",
    ],
)

ts_devserver(
    name = "devserver",
    additional_root_paths = [
        "npm/node_modules/react/umd",
        "npm/node_modules/react-dom/umd",
        "react_samples/src/styles",
    ],
    data = ["//:node_modules"],
    entry_module = "comms/peer-react-app/index",
    port = 3001,
    # This is the path we'll request from the browser, see index.html
    serving_path = "/bundle.js",
    # The devserver can serve our static files too
    static_files = [
        "index.html",
        "static/index.css",
    ],
    deps = [
        "static/config.js",
        ":peer-react-app",
        "@npm//decentraland-ui",
        "@npm//fp-future:fp-future__umd",
        "@npm//react",
        "@npm//react-dom",
    ],
)
