load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("//tools/npm:package.bzl", "dataform_npm_package")
load("@npm_bazel_karma//:index.bzl", "karma_web_test_suite")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "peer",
    srcs = glob(["src/**/*.ts"]),
    module_name = "katalyst/peer",
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types/simple-peer",
        "@npm//eventemitter3",
        "@npm//fp-future",
        "@npm//simple-peer"
    ],
)

dataform_npm_package(
    name = "package",
    package_layers = [
        "//:common.package.json",
        "peer.package.json",
    ],
    deps = [":peer"],
)

ts_library(
    name = "tests",
    testonly = 1,
    srcs = glob(["test/**/*.ts"]),
    tsconfig = "//:tsconfig.json",
    deps = [
        ":peer",
        "@npm//@types/jasmine",
        "@npm//jasmine",
    ],
)

karma_web_test_suite(
    name = "config_test",
    tags = [],
    runtime_deps = [
    ],
    deps = [
        ":tests",
    ],
)
