load("@npm_bazel_typescript//:index.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "servers",
    srcs = glob(["*.ts"]),
    module_name = "decentraland-katalyst-commons",
    tsconfig = "//:tsconfig.json",
    deps = [
        "//contracts",
        "@npm//@types",
        "@npm//dcl-crypto",
        "@npm//express",
        "@npm//prom-client",
        "@npm//response-time",
    ],
)
