load("@npm_bazel_typescript//:index.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "servers",
    srcs = glob(["*.ts"]),
    module_name = "decentraland-katalyst-commons",
    tsconfig = "//:tsconfig.json",
    deps = [
        "//contracts",
        "@npm//@types",
        "@npm//dcl-crypto",
        "@npm//express",
        "@npm//prom-client",
        "@npm//response-time",
        "@npm//web3x",
    ],
)

ts_library(
    name = "tests_unit",
    testonly = 1,
    srcs = glob(["test/**/*.ts"]),
    tsconfig = "//:tsconfig.json",
    deps = [
        "//contracts",
        ":servers",
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//ts-mockito",
    ],
)

load("@npm_bazel_jasmine//:index.bzl", "jasmine_node_test")

jasmine_node_test(
    name = "unit_test",
    deps = [
        ":tests_unit",
        "@npm//jasmine",
    ],
)
