load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
load("//tools/npm:package.bzl", "dataform_npm_package")
load("@npm_bazel_jasmine//:index.bzl", "jasmine_node_test")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "lighthouse",
    srcs = glob(["src/**/*.ts"]),
    module_name = "@katalyst/lighthouse",
    deps = [
        "//commons",
        "//comms/peer",
        "@npm//@types",
        "@npm//cors",
        "@npm//express",
        "@npm//isomorphic-fetch",
        "@npm//morgan",
        "@npm//peerjs-server",
        "@npm//wrtc",
        "@npm//ws",
    ],
)

nodejs_binary(
    name = "server",
    data = [
        ":lighthouse",
        "@npm//@bazel/typescript",
        "@npm//typescript",
    ],
    entry_point = "src/server.ts",
)

dataform_npm_package(
    name = "package",
    package_layers = [
        "//:common.package.json",
        "lighthouse.package.json",
    ],
    deps = [],
)

ts_library(
    name = "tests",
    testonly = 1,
    srcs = glob(["test/**/*.ts"]),
    tsconfig = "//:tsconfig.json",
    deps = [
        ":lighthouse",
        "@npm//@types/jasmine",
    ],
)

jasmine_node_test(
    name = "unit_test",
    deps = [
        ":tests",
        "@npm//jasmine",
    ],
)
