load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
load("//tools/npm:package.bzl", "dataform_npm_package")
load("@npm_bazel_jasmine//:index.bzl", "jasmine_node_test")
load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "static",
    srcs = glob(
        include = [
            "static/**/*",
        ],
        exclude = [
            "static/**/*.ts",
            "static/**/*.tsx",
        ],
    ),
)

ts_library(
    name = "monitor",
    srcs = glob([
        "static/monitor/src/**/*.ts",
        "static/monitor/src/**/*.tsx",
    ]),
    module_name = "lighthouse-monitor",
    deps = [
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//react",
        "@npm//react-dom",
        "@npm//viz.js",
    ],
)

# naming this rule this way to include the resulting bundle in the desired directory 'static/monitor/src' as said in https://github.com/bazelbuild/rules_nodejs/issues/1379
rollup_bundle(
    name = "static/monitor/src/bundle",
    srcs = [
        "@npm//react",
        "@npm//react-dom",
    ],
    config_file = ":rollup.config.js",
    entry_point = "static/monitor/src/monitor.tsx",
    format = "umd",
    output_dir = False,
    sourcemap = "false",
    deps = [
        ":monitor",
        "@npm//@rollup/plugin-commonjs",
        "@npm//@rollup/plugin-node-resolve",
        "@npm//@wessberg/rollup-plugin-ts",
        "@npm//rollup-plugin-json",
        "@npm//rollup-plugin-node-globals",
    ],
)

ts_library(
    name = "lighthouse",
    srcs = glob(["src/**/*.ts"]),
    module_name = "@katalyst/lighthouse",
    deps = [
        "//commons/servers",
        "//commons/utils",
        "//contracts",
        "@npm//@dcl/archipelago",
        "@npm//@types",
        "@npm//cors",
        "@npm//dcl-crypto",
        "@npm//dcl-catalyst-commons",
        "@npm//express",
        "@npm//fast-deep-equal",
        "@npm//fp-future",
        "@npm//isomorphic-fetch",
        "@npm//morgan",
        "@npm//peerjs-server",
        "@npm//prom-client",
        "@npm//web3x",
        "@npm//wrtc",
        "@npm//ws",
    ],
)

nodejs_binary(
    name = "server",
    data = [
        ":lighthouse",
        ":static",
        ":static/monitor/src/bundle",
        "@npm//@bazel/typescript",
        "@npm//typescript",
    ],
    entry_point = "src/server.ts",
)

dataform_npm_package(
    name = "package",
    package_layers = [
        "//:common.package.json",
        "lighthouse.package.json",
    ],
    deps = [],
)

ts_library(
    name = "tests",
    testonly = 1,
    srcs = glob(["test/**/*.ts"]),
    tsconfig = "//:tsconfig.json",
    deps = [
        ":lighthouse",
        "//commons/servers",
        "//commons/utils",
        "@npm//@types/express",
        "@npm//@types/jasmine",
        "@npm//isomorphic-fetch",
        "@npm//express",
    ],
)

jasmine_node_test(
    name = "unit_test",
    deps = [
        ":tests",
        "@npm//jasmine",
    ],
)
