load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("//tools/npm:package.bzl", "dataform_npm_package")
load("@npm_bazel_karma//:index.bzl", "karma_web_test_suite")
load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")
load("@build_bazel_rules_nodejs//:defs.bzl", "npm_package")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "peer",
    srcs = glob(["src/**/*.ts"]),
    module_name = "decentraland-katalyst-peer",
    tsconfig = "//:tsconfig.json",
    deps = [
        "//commons/utils",
        "//comms/protocol:comms-protocol",
        "@npm//@types",
        "@npm//eventemitter3",
        "@npm//fp-future",
        "@npm//long",
        "@npm//protobufjs",
        "@npm//simple-peer",
    ],
)

dataform_npm_package(
    name = "dpackage",
    package_layers = [
        "//:common.package.json",
        "peer.package.json",
    ],
    deps = [":peer"],
)

rollup_bundle(
    name = "bundle",
    config_file = ":rollup.config.js",
    entry_point = "src/index.ts",
    format = "esm",
    output_dir = False,
    sourcemap = "false",
    deps = [
        ":peer",
        "//commons/utils",
        "//comms/protocol:comms-protocol",
        "@npm//@wessberg/rollup-plugin-ts",
        "@npm//rollup-plugin-json",
    ],
)

npm_package(
    name = "package",
    deps = [
        ":bundle.js",
        ":dpackage_gen_package_json",
        ":peer",
        "//commons/utils",
        "//comms/protocol:comms-protocol",
    ],
)

ts_library(
    name = "tests",
    testonly = 1,
    srcs = glob(["test/**/*.ts"]),
    tsconfig = "//:tsconfig.json",
    deps = [
        ":peer",
        "//commons/test-utils",
        "//comms/protocol:comms-protocol",
        "@npm//@types/jasmine",
        "@npm//@types/sinon",
        "@npm//fp-future",
        "@npm//sinon",
    ],
)

karma_web_test_suite(
    name = "config_test",
    config_file = ":karma.conf.js",
    data = [
        ":tests",
    ],
    static_files = [
        "test/config.js",
        "@npm//simple-peer:simple-peer__files",
        "@npm//protobufjs:protobufjs__files",
        "@npm//long:long__files",
    ],
    tags = [],
    runtime_deps = [
    ],
    deps = [
        "test/config.js",
        ":tests",
        "@npm//eventemitter3:eventemitter3__umd",
        "@npm//fp-future:fp-future__umd",
        "@npm//karma-mocha-reporter",
        "@npm//karma-spec-reporter",
        "@npm//protobufjs:protobufjs__umd",
    ],
)
